# NewsApi

./: db.sqlite3  db.sqlite3-journal  pyproject.toml  requirements.txt
news_api/: settings.py  urls.py
news_api_app/: admin.py  models.py  serializers.py  urls.py  views.py
news_api_app/migrations/: 0001_initial.py  0002_auto_20200527_1004.py  0002_auto_20200528_0840.py  0003_auto_20200528_0848.py  0004_headline_statelist.py  0005_auto_20200528_1524.py  0006_auto_20200528_1528.py  0007_auto_20200528_1533.py  0008_auto_20200528_1537.py  0009_remove_headline_statelist.py  0010_auto_20200528_1645.py  0011_auto_20200529_0424.py  0012_auto_20200529_0438.py  0013_auto_20200529_1157.py  0014_auto_20200529_1302.py  0015_auto_20200529_1302.py  0016_auto_20200529_1324.py  0017_companines_newsdate.py  0018_auto_20200529_1402.py  0019_magazinecategory.py  0020_magazine.py  0021_sundaymagazine.py  0022_auto_20200531_1845.py  0023_district.py  0024_companines_districtname.py  0025_auto_20200601_1650.py  0026_auto_20200601_1743.py  0027_auto_20200604_0918.py  0028_auto_20200604_1742.py  0029_auto_20200604_1835.py  0030_auto_20200606_1051.py  0031_auto_20200606_2100.py  0032_auto_20200606_2150.py  0033_auto_20200606_2159.py  0034_remove_companinespdf_districtnames.py  0035_auto_20200608_1734.py  0036_auto_20200609_0950.py  0037_auto_20200609_1013.py  (+2 more)
template/: Add_Publishnewspaper.html  District.html  Publication_house.html  admin_base.html  headline.html  login_user.html  magzine.html  magzine_catagory.html  publish_newspaper.html  state.html  sunday_magzine.html
