[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "newsapi"
version = "0.1.0"
[tool.poetry.dependencies]
django = "^3.0"
djangorestframework = "^3.11"
python = "^3.7"
bootstrap4 = "^0.1.0"
[tool.poetry.dev-dependencies]
